--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express Crud</title>
     <link rel="shortcut icon" href="./images/express-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-rnf1NZhpR4uWK45CUM5Cz8yxO6G6a5g2wWV2uzvjMO50J7ijtSCbHKEF4hWfU7SN9zTxAbE2HfQqAEMbh5B5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="mybody">
     <div class="completeContainer">
     <h1>Express <span style="color: skyblue;"> &nbsp Crud</span></h1>
     <form>
-    <label for="postTitle">Post Title:</label><br>
-    <input id="postTitle" placeholder="Post Title"><br><br><br>
-    <label for="postText">Post Text:</label><br>
-    <input id="postText" placeholder="Post Text">
+    <label for="postTitle">Post <span style="color: skyblue;">&nbsp;Title:</span></label><br>
+    <input id="postTitle" placeholder="Post Title" maxlength="25" required><br><br><br>
+    <label for="postText">Post <span style="color: skyblue;">&nbsp;Text:</span></label><br>
+    <input id="postText" placeholder="Post Text" maxlength="60" required>
     <button type="submit" id="createPost">Post</button></form>
     <br><br>
     <div id="result"></div>
@@ -25,10 +28,10 @@
     <div id="allPosts"></div>
 </div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha512-WZ7TCoBEb6qW2+z9+e/6OZ0vzTDv7wGzkxS2O8hEXRjnxYYBhMBr9xoaAYksF+HHhMDFQhDbkC4v9E1y19//A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.js"></script>
 
     <script type="module" src="./app.mjs"></script>
 </body>
